--- a/config/config.env
+++ b/config/config.env
@@ -2,11 +2,11 @@ PORT=4000
 
 MONGO_URI=mongodb+srv://rahulyadav:placement@cluster0.nf2p91h.mongodb.net/courseBundler?retryWrites=true
 
-FRONTEND_URL=https://coursemaniat.netlify.app
+FRONTEND_URL=http://localhost:3000
 
 JWT_SECRET=kashdfkjhsjdbfjskjdfkjsbkjdfakbdjksbasbdfjasfjbjhadjhbfd
 
-SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USER=251f69144fc025
 SMTP_PASS=a1b618f133cb70
