--- a/config/config.env
+++ b/config/config.env
@@ -2,7 +2,7 @@ PORT=4000
 
 MONGO_URI=mongodb+srv://rahulyadav:placement@cluster0.nf2p91h.mongodb.net/courseBundler?retryWrites=true
 
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://coursemaniaa.netlify.app
 
 JWT_SECRET=kashdfkjhsjdbfjskjdfkjsbkjdfakbdjksbasbdfjasfjbjhadjhbfd
 
